[package]
name = "egui_glow"
version = "0.1.0"
authors = ["AlexApps99 <alex.apps99@gmail.com>"]
description = "Bindings for using egui natively using the glow library"
edition = "2018"
homepage = "https://github.com/AlexApps99/egui"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AlexApps99/egui"
categories = ["gui", "game-development"]
keywords = ["glow", "egui", "gui", "gamedev"]
include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
  "src/shader/*.glsl",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
copypasta = { version = "0.7", optional = true }
egui = { version = "0.14.0", path = "../egui", default-features = false, features = ["single_threaded"] }
epi = { version = "0.14.0", path = "../epi" }
glow = "0.11"
glutin = "0.27"
webbrowser = { version = "0.5", optional = true }

# feature "http":
ureq = { version = "2.2", optional = true }

# feature "persistence":
directories-next = { version = "2", optional = true }
ron = { version = "0.6", optional = true }
serde = { version = "1", optional = true }

# feature screen_reader
tts = { version = "0.17", optional = true }

# feature "time"
chrono = { version = "0.4", optional = true }

[features]
default = ["default_fonts", "copypasta", "webbrowser"]

# If set, egui will use `include_bytes!` to bundle some fonts.
# If you plan on specifying your own fonts you may disable this feature.
default_fonts = ["egui/default_fonts"]
http = ["epi/http", "ureq"]
persistence = [
    "directories-next",
    "egui/persistence",
    "epi/persistence",
    "ron",
    "serde",
]
time = ["chrono"] # for seconds_since_midnight
screen_reader = ["tts"] # experimental
