[package]
name = "graph_editor"
version = "0.1.0"
authors = ["Geoffrey Irons <sdfgeoff@gmail.com>"]
edition = "2018"


[dependencies]
eframe = { version = "0.14.0"}
rfd = { version = "0.4.3" }
egui = { version = "0.14.0"}
gametoy = {path = "../gametoy"}
serde_json = { version = "1.0.0"}
egui_nodes = {path = "../egui_nodes"}
