[package]
name = "webpage"
version = "0.1.0"
authors = ["Geoffrey Irons <sdfgeoff@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen="0.2.69"
js-sys="0.3.40"
gametoy={path="../gametoy"}

console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.4"
features = [
    "Document",
    "Event",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlElement",
    "KeyboardEvent",
    "KeyEvent",
    "MouseEvent",
    "Window",
]
